--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ body {font-family: arial,sans-serif;}
 .m1 {margin: 0.5em;}
 .m2 {margin: 1em;}
 .m3 {margin: 2em;}
+.mr1 {margin-right: 0.5em;}
 
 /* padding */
 .p1 {padding: 1em;}
